# mtes_consult

./: .gitignore  README.md  pyproject.toml
mte/mte/: items.py  pipelines.py  settings.py
mte/mte/spiders/: mte_crawler.py
scrapper/: scrapy.cfg
scrapper/mte/: middlewares.py
scrapper/mte/spiders/: mte_crawler.py
src/mtes_consult/: __init__.py  __main__.py  preprocess.py
tests/: test_mtes_consult.py
