[tool.poetry]
name = "mtes_consult"
version = "0.1.0"
description = ""
authors = ["Daniel Thonon <d.thonon9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
