[tool.poetry]
name = "mtes_consult"
version = "0.1.0"
description = "Download and analyze MTE public consultations"
authors = ["Daniel Thonon <d.thonon9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
